--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>REVU</h1>
+<h2>Home Rental Review Site</h2>
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrTclsBLkzFWVVIg?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+<iframe class="airtable-embed" src="https://airtable.com/embed/shrTclsBLkzFWVVIg?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="1600" style="background: transparent;"></iframe>
