--- a/properties.html
+++ b/properties.html
@@ -32,9 +32,11 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="index.html">Search Reviews</a></li>
-            <li><a href="index.html">Add a Review</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="properties.html">Properties</a></li>
+            <li><a href="agents.html">Agents</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -51,26 +53,18 @@
     </div>
   </header>
   <!-- END: header -->
-  <section class="probootstrap-slider flexslider">
+  <section class="probootstrap-slider flexslider2 page-inner">
+    <div class="overlay"></div>
     <div class="probootstrap-wrap-banner">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-8">
 
-            <div class="probootstrap-home-search probootstrap-animate">
-              <form action="" method="post">
-                <h2 class="heading">REVU Rental History Reports</h2>
-                <div class="probootstrap-field-group">
-                  <div class="probootstrap-fields">
-                    
-                    <div class="search-field">
-                      <i class="icon-location2"></i>
-                      <input type="text" class="form-control" placeholder="Enter address, ZIP code, Neighborhoods">
-                    </div>
-                  </div>
-                  <button class="btn btn-success" type="submit"><i class="icon-magnifying-glass t2"></i> Start Search</button>
-                </div>
-              </form>
+            <div class="page-title probootstrap-animate">
+              <div class="probootstrap-breadcrumbs">
+                <a href="#">Home</a><span>Properties</span>
+              </div>
+              <h1>Properties</h1>
             </div>
 
           </div>
@@ -78,131 +72,15 @@
       </div>
     </div>
     <ul class="slides">
-      <li style="background-image: url(img/slider_1.jpg);" class="overlay"></li>
-      <li style="background-image: url(img/slider_4.jpg);" class="overlay"></li>
-      <li style="background-image: url(img/slider_2.jpg);" class="overlay"></li>
+      <li style="background-image: url(img/slider_1.jpg);"></li>
+      <li style="background-image: url(img/slider_4.jpg);"></li>
+      <li style="background-image: url(img/slider_2.jpg);"></li>
     </ul>
   </section>
   <!-- END: slider  -->
 
   <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="probootstrap-card text-center probootstrap-animate">
-            <div class="probootstrap-card-media svg-sm colored">
-              <img src="img/flaticon/svg/001-prize.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Accurate Reviews</h2>
-              <p>Giving renters power from the very beginning</p>
-              <p><a href="#">Find out more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="probootstrap-card text-center probootstrap-animate">
-            <div class="probootstrap-card-media svg-sm colored">
-              <img src="img/flaticon/svg/005-new.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">New Houses</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="probootstrap-card text-center  probootstrap-animate">
-            <div class="probootstrap-card-media svg-sm colored">
-              <img src="img/flaticon/svg/006-coin.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Affordable Houses</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- END: section -->
-
-  <section class="probootstrap-section">
-    <div class="container">
-      <div class="row heading">
-        <h2 class="mt0 mb50 text-center">Explore Our Neighborhoods</h2>
-      </div>
-      <div class="row probootstrap-gutter10">
-        <div class="col-md-6 col-sm-6">
-          <a href="#" class="probootstrap-hover-overlay">
-            <img src="img/slider_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-            <div class="probootstrap-text-overlay">
-              <h3>New York</h3>
-              <p>430 Properties</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-6 col-sm-6">
-          <a href="#" class="probootstrap-hover-overlay">
-            <img src="img/slider_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-            <div class="probootstrap-text-overlay">
-              <h3>San Francisco</h3>
-              <p>294 Properties</p>
-            </div>
-          </a>
-        </div>
-        <div class="clearfix visible-sm-block"></div>
-
-        <div class="col-md-4 col-sm-6">
-          <a href="#" class="probootstrap-hover-overlay">
-            <img src="img/slider_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-            <div class="probootstrap-text-overlay">
-              <h3>Brooklyn</h3>
-              <p>300 Properties</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <a href="#" class="probootstrap-hover-overlay">
-            <img src="img/slider_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-            <div class="probootstrap-text-overlay">
-              <h3>Chicago</h3>
-              <p>268 Properties</p>
-            </div>
-          </a>
-        </div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-md-4 col-sm-6">
-          <a href="#" class="probootstrap-hover-overlay">
-            <img src="img/slider_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-            <div class="probootstrap-text-overlay">
-              <h3>Los Angeles</h3>
-              <p>342 Properties</p>
-            </div>
-          </a>
-        </div>
-
-      </div>
-    </div>
-  </section>
-  <!-- END: section -->
-
-  <section class="probootstrap-section probootstrap-bg" style="background-image: url(img/slider_2.jpg);">
-    <div class="container text-center probootstrap-animate" data-animate-effect="fadeIn">
-      <h2 class="heading">Best Home &amp; Properties</h2>
-      <p class="sub-heading">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-      <p><a href="#" class="btn btn-primary mb10">Find out more</a></p>
-    </div>
-  </section>
-  <!-- END: section -->
-
-  <section class="probootstrap-section probootstrap-section-lighter">
-    <div class="container">
-      <div class="row heading">
-        <h2 class="mt0 mb50 text-center">Featured Listing</h2>
-      </div>
       <div class="row">
         <div class="col-md-4 col-sm-6">
           <div class="probootstrap-card probootstrap-listing">
@@ -432,6 +310,68 @@
     </div>
   </section>
 
+  
+
+  <section class="probootstrap-section">
+    <div class="container">
+      <div class="row heading">
+        <h2 class="mt0 mb50 text-center">Explore Our Neighborhoods</h2>
+      </div>
+      <div class="row probootstrap-gutter10">
+        <div class="col-md-6 col-sm-6">
+          <a href="#" class="probootstrap-hover-overlay">
+            <img src="img/slider_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+            <div class="probootstrap-text-overlay">
+              <h3>New York</h3>
+              <p>430 Properties</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-6 col-sm-6">
+          <a href="#" class="probootstrap-hover-overlay">
+            <img src="img/slider_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+            <div class="probootstrap-text-overlay">
+              <h3>San Francisco</h3>
+              <p>294 Properties</p>
+            </div>
+          </a>
+        </div>
+        <div class="clearfix visible-sm-block"></div>
+
+        <div class="col-md-4 col-sm-6">
+          <a href="#" class="probootstrap-hover-overlay">
+            <img src="img/slider_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+            <div class="probootstrap-text-overlay">
+              <h3>Brooklyn</h3>
+              <p>300 Properties</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <a href="#" class="probootstrap-hover-overlay">
+            <img src="img/slider_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+            <div class="probootstrap-text-overlay">
+              <h3>Chicago</h3>
+              <p>268 Properties</p>
+            </div>
+          </a>
+        </div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-md-4 col-sm-6">
+          <a href="#" class="probootstrap-hover-overlay">
+            <img src="img/slider_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+            <div class="probootstrap-text-overlay">
+              <h3>Los Angeles</h3>
+              <p>342 Properties</p>
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- END: section -->
+
   <section class="probootstrap-half reverse">
     <div class="image-wrap">
       <div class="image" style="background-image: url(img/slider_5.jpg);"></div>
@@ -442,122 +382,6 @@
       <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
       <p class="mb50">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
       <p><a href="#" class="btn btn-primary mb10">Find out more</a></p>
-    </div>
-  </section>
-
-  <section class="probootstrap-section">
-    <div class="container">
-      <div class="row heading">
-        <h2 class="mt0 mb50 text-center">Our Services</h2>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
-          <div class="service text-center">
-            <div class="icon"><i class="icon-list2"></i></div>
-            <h2 class="heading">Property Listing</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
-          <div class="service text-center">
-            <div class="icon"><i class="icon-power-cord"></i></div>
-            <h2 class="heading">Property Management</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
-          <div class="service text-center">
-            <div class="icon"><i class="icon-price-tag2"></i></div>
-            <h2 class="heading">Renting Properties</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-        <div class="clearfix visible-lg-block visible-md-block"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
-          <div class="service text-center">
-            <div class="icon"><i class="icon-direction"></i></div>
-            <h2 class="heading">Selling Properties</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-        <div class="clearfix visible-sm-block"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
-          <div class="service text-center">
-            <div class="icon"><i class="icon-home3"></i></div>
-            <h2 class="heading">Brook A Property</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
-          <div class="service text-center">
-            <div class="icon"><i class="icon-magnifying-glass"></i></div>
-            <h2 class="heading">Search Property</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          </div>
-        </div>
-        <div class="clearfix visible-lg-block visible-md-block"></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- END: section -->
-
-  <section class="probootstrap-section probootstrap-section-lighter">
-    <div class="container">
-      <div class="row heading">
-        <h2 class="mt0 mb50 text-center">Our Agents</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_1.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">Jeremy Slater</h2>
-              <p><small>Real Estate Brooker</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_2.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">James Butterly</h2>
-              <p><small>Buying Agent</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_3.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">James Smith</h2>
-              <p><small>Real Estate Brooker</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="probootstrap-card probootstrap-person text-left">
-            <div class="probootstrap-card-media">
-              <img src="img/person_4.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
-            </div>
-            <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading mb0">Chris White</h2>
-              <p><small>Selling Agent</small></p>
-              <p><a href="#">View Details</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -631,7 +455,6 @@
     <a href="#" class="js-gotop"><i class="icon-chevron-thin-up"></i></a>
   </div>
   
-
   <script src="js/scripts.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/custom.js"></script>
