--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="index.html">Search Reviews</a></li>
-            <li><a href="index.html">Add a Review</a></li>
+            <li><a class="disabled" href="index.html">Request a Report</a></li>
+            <li><a href="index.html">faq</a></li>
+            <li><a class="btn btn-primary " href="submit-a-report.html">Submit a Report</a></li>
           </ul>
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -65,10 +66,10 @@
                     
                     <div class="search-field">
                       <i class="icon-location2"></i>
-                      <input type="text" class="form-control" placeholder="Enter address, ZIP code, Neighborhoods">
+                      <input disabled type="text" class="form-control" placeholder="Enter address, ZIP code, Neighborhoods">
                     </div>
                   </div>
-                  <button class="btn btn-success" type="submit"><i class="icon-magnifying-glass t2"></i> Start Search</button>
+                  <button disabled class="btn btn-primary" type="submit"><i class="icon-magnifying-glass t2"></i> Request a Report</button>
                 </div>
               </form>
             </div>
@@ -140,7 +141,7 @@
             <img src="img/slider_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
             <div class="probootstrap-text-overlay">
               <h3>New York</h3>
-              <p>430 Properties</p>
+              <p>430 Reviewed Properties</p>
             </div>
           </a>
         </div>
@@ -149,7 +150,7 @@
             <img src="img/slider_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
             <div class="probootstrap-text-overlay">
               <h3>San Francisco</h3>
-              <p>294 Properties</p>
+              <p>294 Reviewed Properties</p>
             </div>
           </a>
         </div>
@@ -160,7 +161,7 @@
             <img src="img/slider_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
             <div class="probootstrap-text-overlay">
               <h3>Brooklyn</h3>
-              <p>300 Properties</p>
+              <p>300 Reviewed Properties</p>
             </div>
           </a>
         </div>
@@ -169,7 +170,7 @@
             <img src="img/slider_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
             <div class="probootstrap-text-overlay">
               <h3>Chicago</h3>
-              <p>268 Properties</p>
+              <p>268 Reviewed Properties</p>
             </div>
           </a>
         </div>
@@ -179,7 +180,7 @@
             <img src="img/slider_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
             <div class="probootstrap-text-overlay">
               <h3>Los Angeles</h3>
-              <p>342 Properties</p>
+              <p>342 Reviewed Properties</p>
             </div>
           </a>
         </div>
