--- a/submit-a-report.html
+++ b/submit-a-report.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Haus &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
+    <title>REVU | Submit a Report</title>
     <meta name="description" content="Free Bootstrap Theme by uicookies.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     
@@ -25,7 +25,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Haus<span>.</span></a>
+        <a href="index.html" class="probootstrap-logo">REVU<span></span></a>
         
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
@@ -33,10 +33,9 @@
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="properties.html">Properties</a></li>
-            <li><a href="agents.html">Agents</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Request a Report</a></li>
+            <li><a href="index.html">faq</a></li>
+            <li><a class="btn btn-primary " href="submit-a-report.html">Submit a Report</a></li>
           </ul>
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -62,9 +61,9 @@
 
             <div class="page-title probootstrap-animate">
               <div class="probootstrap-breadcrumbs">
-                <a href="#">Home</a><span>About</span>
+                <a href="index.html">Home</a><span>Submit a Report</span>
               </div>
-              <h1>About Us</h1>
+              <h1>Submit a Report</h1>
             </div>
 
           </div>
@@ -86,7 +85,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p><img src="img/slider_5.jpg" class="img-responsive" alt="Free Bootstrap Template by uicookies.com"></p>
+          <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrTclsBLkzFWVVIg?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="1561" style="background: transparent; border: 1px solid #ccc;"></iframe>
         </div>
       </div>
       <div class="row">
