--- a/submit-a-report.html
+++ b/submit-a-report.html
@@ -80,12 +80,9 @@
 
   <section class="probootstrap-section">
     <div class="container">
-      <div class="row heading">
-        <div class="col-md-12"><h2 class="mt0 mb50 text-center">Our Company</h2></div>
-      </div>
       <div class="row">
         <div class="col-md-12">
-          <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrTclsBLkzFWVVIg?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="1561" style="background: transparent; border: 1px solid #ccc;"></iframe>
+          <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrTclsBLkzFWVVIg?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="1561" style="background: transparent;"></iframe>
         </div>
       </div>
       <div class="row">
