--- a/submit-a-report.html
+++ b/submit-a-report.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrTclsBLkzFWVVIg?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="1561" style="background: transparent;"></iframe>
+          <script src="https://www.cognitoforms.com/f/seamless.js" data-key="erN5EJdk10yZcAYn4YasKg" data-form="1"></script>
         </div>
       </div>
       <div class="row">
@@ -189,7 +189,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md-3 col-sm-6">
           <div class="probootstrap-card probootstrap-person text-left">
             <div class="probootstrap-card-media">
