--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
       </div>
     </div>
     <ul class="slides">
-      <li style="background-image: url(img/slider_1.jpg);" class="overlay"></li>
-      <li style="background-image: url(img/slider_4.jpg);" class="overlay"></li>
-      <li style="background-image: url(img/slider_2.jpg);" class="overlay"></li>
+      <li style="background-image: url(img/masthead.jpg);" class="overlay"></li>
     </ul>
   </section>
   <!-- END: slider  -->
