--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
               <img src="img/flaticon/svg/001-prize.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Accurate Reviews</h2>
-              <p>Giving renters power from the very beginning</p>
+              <h2 class="probootstrap-card-heading">Accurate Reports</h2>
+              <p>Feel confident with your rental before moving in.</p>
               <p><a href="#">Find out more</a></p>
             </div>
           </div>
