Landing page cleanup

--- a/submit-a-report.html
+++ b/submit-a-report.html
@@ -93,7 +93,7 @@
       <div class="row mb60">
         <div class="col-md-3">
           <div class="probootstrap-footer-widget">
-            <h4 class="heading">About Haus.</h4>
+            <h4 class="heading">About Revu.</h4>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
             <p><a href="#">Read more...</a></p>
           </div> 
