updated text and icons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-
+            <h1>Rental reviews from the people</h1>
+            <h2>Avoid frustrating landlord problems by getting a property history report today</h2>
             <div class="probootstrap-home-search probootstrap-animate">
               <form action="" method="post">
                 <h2 class="heading">REVU Rental History Reports</h2>
@@ -94,8 +95,8 @@
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading">Accurate Reports</h2>
-              <p>Feel confident with your rental before moving in.</p>
-              <p><a href="#">Find out more</a></p>
+              <p>See real maintenance reports and tenant reviews. Feel confident with your rental before moving in.</p>
+              <p><a href="#">Check the property</a></p>
             </div>
           </div>
         </div>
@@ -105,9 +106,9 @@
               <img src="img/flaticon/svg/005-new.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Another Bullet Point</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
+              <h2 class="probootstrap-card-heading">Avoid Scummy Landlords</h2>
+              <p>Get the real details from people that have been there. No more discovering hidden problems after signing a contract.</p>
+              <p><a href="#">Get peace of mind</a></p>
             </div>
           </div>
         </div>
@@ -117,9 +118,9 @@
               <img src="img/flaticon/svg/006-coin.svg" class="svg" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
-              <h2 class="probootstrap-card-heading">Final Bullet Point</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <p><a href="#">Find out more</a></p>
+              <h2 class="probootstrap-card-heading">Know the Hidden Cost</h2>
+              <p>Get the feeling they're keeping the security deposit just because they can? If there's a pattern, we'll show you.</p>
+              <p><a href="#">Save some dough</a></p>
             </div>
           </div>
         </div>
@@ -131,7 +132,7 @@
   <section class="probootstrap-section">
     <div class="container">
       <div class="row heading">
-        <h2 class="mt0 mb50 text-center">Reports In Your Neighborhood</h2>
+        <h2 class="mt0 mb50 text-center">Check out your neighborhood</h2>
       </div>
       <div class="row probootstrap-gutter10">
         <div class="col-md-6 col-sm-6">
@@ -190,11 +191,11 @@
 
   <section class="probootstrap-section probootstrap-bg" style="background-image: url(img/slider_2.jpg);">
     <div class="container text-center probootstrap-animate" data-animate-effect="fadeIn">
-      <h2 class="heading">Something to think about</h2>
-      <p class="sub-heading">Its strange that tenants have to provide landlords with references from places they've rented but
-        landlords don't have to provide references from previous tentants.
+      <h2 class="heading">Ask for your landlord's references</h2>
+      <p class="sub-heading">Strange that tenants have to provide references from places they've rented
+        but landlords aren’t held to the same standard by previous tenants.
       </p>
-      <p><a href="#" class="btn btn-primary mb10">Find out more</a></p>
+      <p><a href="#" class="btn btn-primary mb10">Tell us about your landlord</a></p>
     </div>
   </section>
   <!-- END: section -->
@@ -238,62 +239,64 @@
     </div>
     <div class="text">
       <p class="mb10 subtitle">Why Choose Us</p>
-      <h3 class="mt0 mb40">We Offer Piece of Mind</h3>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-      <p class="mb50">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-      <p><a href="#" class="btn btn-primary mb10">Find out more</a></p>
+      <h3 class="mt0 mb40">Your friend's 'hot take' - at scale</h3>
+      <p>We've all been there. Your lease term is coming up and they're jacking up the rent price. You ask your friends where they think a good place to go is.
+        You've tried apartment search sites, but they're in the pockets of the property owners. So, where do you go to double check?
+      </p>
+      <p class="mb50">We're your friend network, but bigger. Real people and honest reviews without 'big property' biasing the results.</p>
+      <p><a href="#" class="btn btn-primary mb10">Check a rental</a></p>
     </div>
   </section>
 
   <section class="probootstrap-section">
     <div class="container">
       <div class="row heading">
-        <h2 class="mt0 mb50 text-center">What We Offer</h2>
+        <h2 class="mt0 mb50 text-center">No stress, we've got you</h2>
       </div>
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
           <div class="service text-center">
-            <div class="icon"><i class="icon-list2"></i></div>
-            <h2 class="heading">Submit Reports</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="icon"><i class="icon-bug"></i></div>
+            <h2 class="heading">Report Problems</h2>
+            <p>Is there an issue with your unit? Keep getting ghosted on a fix? Vent to us. We want to hear it!</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
           <div class="service text-center">
-            <div class="icon"><i class="icon-power-cord"></i></div>
+            <div class="icon"><i class="icon-file-text"></i></div>
             <h2 class="heading">Request Reports</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>Got a couple properties in mind, but aren’t sure which is best? We’ve got the deets.</p>
           </div>
         </div>
         <div class="clearfix visible-sm-block"></div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
           <div class="service text-center">
-            <div class="icon"><i class="icon-price-tag2"></i></div>
-            <h2 class="heading">Communicate with Previous Tenants</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="icon"><i class="icon-users"></i></div>
+            <h2 class="heading">Communicatation</h2>
+            <p>Have a question before you sign? Chat with who was there before. You can also help others avoid a mess.</p>
           </div>
         </div>
         <div class="clearfix visible-lg-block visible-md-block"></div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
           <div class="service text-center">
-            <div class="icon"><i class="icon-direction"></i></div>
-            <h2 class="heading">Another Feature</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="icon"><i class="icon-wrench"></i></div>
+            <h2 class="heading">Real Maintenance</h2>
+            <p>Did your landlord actually replace the carpet every year or did they just say they did? Find out!</p>
           </div>
         </div>
         <div class="clearfix visible-sm-block"></div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
           <div class="service text-center">
-            <div class="icon"><i class="icon-home3"></i></div>
-            <h2 class="heading">Another Feature</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="icon"><i class="icon-stopwatch"></i></div>
+            <h2 class="heading">See Average Rent Duration</h2>
+            <p>Does everyone move out after 12 months? Probably a sign something fishy is going on. Just saying.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 probootstrap-animate">
           <div class="service text-center">
-            <div class="icon"><i class="icon-magnifying-glass"></i></div>
-            <h2 class="heading">Another Feature</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="icon"><i class="icon-camera"></i></div>
+            <h2 class="heading">Pictures vs Reality</h2>
+            <p>Is the website beautiful but your unit has mildew? Gross. Give a heads up to other would-be tenants.</p>
           </div>
         </div>
         <div class="clearfix visible-lg-block visible-md-block"></div>
