--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <section class="probootstrap-slider flexslider">
     <div class="probootstrap-wrap-banner">
       <div class="container">
+        <img src="img/masthead.jpg" width="100%"  />
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h1>Rental reviews from the people</h1>
@@ -79,9 +80,6 @@
         </div>
       </div>
     </div>
-    <ul class="slides">
-      <li style="background-image: url(img/masthead.jpg);" class="overlay"></li>
-    </ul>
   </section>
   <!-- END: slider  -->
 
