--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <!-- END: header -->
   <section class="probootstrap-slider flexslider">
     <div class="probootstrap-wrap-banner">
-      <div class="container">
-        <img src="img/masthead.jpg" width="100%"  />
+      <div class="container" style="position: relative;">
+        <img class="masthead-img" src="img/masthead.jpg" width="100%"  />
         <div class="row">
-          <div class="col-md-8 col-md-offset-2">
+          <div style="padding-top:200px" class="col-md-8">
             <h1>Rental reviews from the people</h1>
-            <h2>Avoid frustrating landlord problems by getting a property history report today</h2>
+            <h3>Avoid frustrating landlord problems by getting a property history report today</h3>
             <div class="probootstrap-home-search probootstrap-animate">
               <form action="" method="post">
                 <h2 class="heading">REVU Rental History Reports</h2>
