Checking in updated changes

--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
     <div class="probootstrap-wrap-banner">
       <div class="container" style="position: relative;">
         <img class="masthead-img" src="img/masthead.jpg" width="100%"  />
-        <div class="row">
-          <div style="padding-top:200px" class="col-md-8">
+        <div style="padding-top:80px" class="row">
+          <div class="col-md-6">
             <h1>Rental reviews from the people</h1>
-            <h3>Avoid frustrating landlord problems by getting a property history report today</h3>
+            <h2>Avoid frustrating landlord problems by getting a property history report today</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div  class="col-md-8">
+
             <div class="probootstrap-home-search probootstrap-animate">
               <form action="" method="post">
                 <h2 class="heading">REVU Rental History Reports</h2>
