more visual updates

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a class="disabled" href="index.html">Request a Report</a></li>
-            <li><a href="index.html">faq</a></li>
+            <li class="active"><a href="index.html">HOME</a></li>
+            <li><a href="index.html">FAQ</a></li>
             <li><a class="btn btn-primary " href="submit-a-report.html">Submit a Report</a></li>
           </ul>
           <div class="extra-text visible-xs"> 
@@ -57,7 +56,7 @@
       <div class="container" style="position: relative;">
         <img class="masthead-img" src="img/masthead.jpg" width="100%"  />
         <div style="padding-top:80px" class="row">
-          <div class="col-md-6">
+          <div class="col-md-5">
             <h1>Rental reviews from the people</h1>
             <h2>Avoid frustrating landlord problems by getting a property history report today</h2>
           </div>
@@ -67,7 +66,7 @@
 
             <div class="probootstrap-home-search probootstrap-animate">
               <form action="" method="post">
-                <h2 class="heading">REVU Rental History Reports</h2>
+                <h2 class="heading">Check a property out</h2>
                 <div class="probootstrap-field-group">
                   <div class="probootstrap-fields">
                     
