mobile friendly header

--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
       <div class="container" style="position: relative;">
         <img class="masthead-img" src="img/masthead.jpg" width="100%"  />
         <div style="padding-top:80px" class="row">
-          <div class="col-md-5">
+          <div class="col-sm-5 col-xs-6">
             <h1>Rental reviews from the people</h1>
             <h2>Avoid frustrating landlord problems by getting a property history report today</h2>
           </div>
         </div>
         <div class="row">
-          <div  class="col-md-8">
-
+          <div class="col-md-8 probootstrap-home-search-container">
             <div class="probootstrap-home-search probootstrap-animate">
               <form action="" method="post">
                 <h2 class="heading">Check a property out</h2>
