--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <input disabled type="text" class="form-control" placeholder="Enter address, ZIP code, Neighborhoods">
                     </div>
                   </div>
-                  <button disabled class="btn btn-primary" type="submit"><i class="icon-magnifying-glass t2"></i> Request a Report</button>
+                  <button disabled class="btn btn-primary" type="submit"><i class="icon-magnifying-glass t2"></i> <span class="hidden-xs">Request a Report</span></button>
                 </div>
               </form>
             </div>
